# HepMC3

./: .gitlab-ci.yml  CMakeLists.txt  ChangeLog  HepMC3-config.in  LICENCE  README-for-developers  README.md
.github/workflows/: build.cmake  build.yml  build_cmake.yml
CI/Archlinux/: Dockerfile
CI/CentOS/: Dockerfile10  Dockerfile7  Dockerfile8  Dockerfile9
CI/Fedora/: Dockerfile
cmake/Modules/: Findzstd.cmake
cmake/Templates/: HepMC3Config.cmake.in
doc/: HepMC3.spec
doc/doxygen/: Doxyfile.in  IO.txt  LHEF.txt  Python.txt  attributes.txt  building.txt  differences.txt  features.txt  full.md  full.txt  mainpage.md  mainpage.txt  modules.txt  python.txt  search.txt
examples/: CMakeLists.txt
examples/BasicExamples/: CMakeLists.txt  HepMC3_fileIO_example.cc  basic_tree.cc  hepevt_wrapper_example_main.cc
examples/ConvertExample/: CMakeLists.txt  cmdline.c  cmdline.ggo  convert_example.cc
examples/ConvertExample/include/: WriterDOT.h  WriterEDM4HEP.h  WriterHEPEVTZEUS.h
examples/ConvertExample/src/: AnalysisExample.cc  ReaderuprootTree.cc  WriterDOT.cc  WriterEDM4HEP.cc
examples/LHEFExample/: CMakeLists.txt  LHEF_example.lhe  LHEF_example_cat.cc
examples/Pythia6Example/: CMakeLists.txt  main63.f
examples/Pythia8Example/: CMakeLists.txt  pythia8_example.cc
examples/Pythia8Example/cmake/Modules/: FindPythia8.cmake
examples/RootIOExample2/: CMakeLists.txt  class_example_read.cc  class_example_write.cc
examples/SearchExample/: CMakeLists.txt
examples/SearchExample/src/: search_example.cc
examples/ViewerExample/: CMakeLists.txt
examples/ViewerExample/cmake/Modules/: FindGraphviz.cmake
examples/ViewerExample/src/: HepMC3ViewerFrame.cc  main.cc
hdf5IO/: CMakeLists.txt
hdf5IO/include/HepMC3/: ReaderHDF5.h  WriterHDF5.h  hdf5Utils.h
hdf5IO/src/: ReaderHDF5.cc  WriterHDF5.cc  hdf5Utils.cc
include/HepMC3/: Attribute.h  CompressedIO.h  FourVector.h  GenCrossSection.h  GenEvent.h  GenHeavyIon.h  GenParticle.h  GenRunInfo.h  GenVertex.h  HEPEVT_Helpers.h  HepMC3.h  LHEF.h  ReaderAscii.h  ReaderFactory.h  ReaderFactory_fwd.h  ReaderGZ.h  ReaderMT.h  Setup.h
interfaces/pythia6/include/Pythia6/: Pythia6ToHepMC3.cc
protobufIO/: CMakeLists.txt  HepMC3.proto  HepMC3_v2.proto  HepMC3_v3.proto
protobufIO/include/HepMC3/: Commonprotobuf.h  Readerprotobuf.h  Writerprotobuf.h
protobufIO/src/: Commonprotobuf.cc  Readerprotobuf.cc  Writerprotobuf.cc  protobufUtils.cc
protobufIO/test/: protobufIOReader.cc  protobufIOWriter.cc
python/: CMakeLists.txt  all_includes.hpp.in  hdf5IOincludes.hpp.in  pyHepMC3.hdf5IO.egg-info.in
python/include/pybind11/: eval.h
python/src/: ReaderuprootTree.cc  ReaderuprootTree.h  binders.cpp  hdf5IObinders.cpp  hdf5IObinders.h  pyHepMC3.binder  pyHepMC3.cpp  pyHepMC3_0.cpp  pyHepMC3_1.cpp  pyHepMC3_10.cpp  pyHepMC3_11.cpp  pyHepMC3_12.cpp  pyHepMC3_13.cpp  pyHepMC3_14.cpp  pyHepMC3_15.cpp  pyHepMC3_16.cpp  pyHepMC3_17.cpp  pyHepMC3_18.cpp  pyHepMC3_19.cpp  pyHepMC3_2.cpp  pyHepMC3_3.cpp  pyHepMC3_4.cpp  pyHepMC3_5.cpp  pyHepMC3_6.cpp  pyHepMC3_7.cpp  pyHepMC3_8.cpp  pyHepMC3_9.cpp  pyHepMC3hdf5IO.binder  pyHepMC3hdf5IO.cpp  pyHepMC3hdf5IO_0.cpp  pyHepMC3protobufIO.binder  pyHepMC3protobufIO.cpp  pyHepMC3protobufIO_0.cpp  pyHepMC3rootIO.cpp  pyHepMC3search.binder  pyHepMC3search.cpp  pyHepMC3search_0.cpp  pyHepMC3search_1.cpp  pystreambuf.h  search_binders.cpp
python/src/hdf5IO/: __init__.py
python/test/: inputIO20.proto  inputIO3.hepmc  pyHepMC3TestUtils.py  test_HDF5.py  test_IO4.py  test_IO5.py  test_IO7.py  test_Protobuf.py
rootIO/: CMakeLists.txt
rootIO/include/HepMC3/: ReaderRootTree.h
rootIO/src/: ReaderRoot.cc  ReaderRootTree.cc  WriterRoot.cc
search/include/HepMC3/: Feature.h  Relatives.h
search/src/: Relatives.cc
src/: GenCrossSection.cc  GenEvent.cc  GenHeavyIon.cc  GenPdfInfo.cc  GenRunInfo.cc  GenVertex.cc  HEPEVT_Wrapper.cc  LHEFAttributes.cc  Print.cc  ReaderAscii.cc  ReaderAsciiHepMC2.cc  ReaderFactory.cc  ReaderHEPEVT.cc  ReaderLHEF.cc  ReaderPlugin.cc  Setup.cc  WriterAscii.cc  WriterAsciiHepMC2.cc  WriterHEPEVT.cc  WriterPlugin.cc
test/: CMakeLists.txt  inputIO10.hepmc  inputIO20.proto  inputIO21_libprotobuf2.proto  inputIO28.proto  inputIO8.hepmc  inputReaderFactory1.hepmc  runtestReaderFactory5.sh  testAttributes.cc  testBoost.cc  testConvert2.cc  testGenHeavyIon.cc  testHDF5.cc  testHEPEVTWrapper1.cc  testIO1.cc  testIO11.cc  testIO13.cc  testIO20.cc  testIO21.cc  testIO22.cc  testIO23.cc  testIO24.cc  testIO25.cc  testIO26.cc  testIO27.cc  testIO28.cc  testIO29.cc  testIO30.cc  testIO4.cc  testIO9.cc  testLoops.cc  testMass.cc  testMultipleCopies.cc  testOrder.cc  testPrintBug.cc  testReaderFactory2.cc  testReaderFactory3.cc  testReaderFactory5.cc  testSearch1.cc  testSherpa140Crash.cc  (+5 more)
